# llamacanvas

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  anthropic_llama_canvas.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: tests.yml
api_reference/canvas/: index.html
api_reference/image/: index.html
docs/: api.md  examples.md  index.md  installation.md  usage.md
docs/api/: index.md
docs/api_reference/: canvas.md  image.md
docs/user_guide/: configuration.md  core_concepts.md  image_generation.md  installation.md  quickstart.md
examples/: basic_usage.py
llama_canvas/: __init__.py  cli.py
llama_canvas/api/: app.py
llama_canvas/api/static/css/: styles.css
llama_canvas/core/: agent_manager.py  canvas.py  image.py  video.py
llama_canvas/utils/: __init__.py  logging.py  prompt_enhancer.py
llamacanvas/: __init__.py  main.py  utils.py
search/: search_index.json
src/: ultimate-llama-canvas (6).sh
src/llama_canvas/: __init__.py  cli.py
src/llama_canvas/api/: __init__.py
src/llama_canvas/api/templates/: index.html
src/llama_canvas/core/: __init__.py  agent_manager.py
src/llama_canvas/utils/: __init__.py  config.py  logging.py
src/llamacanvas/: __init__.py  cli.py  config.py  exceptions.py  main.py  models.py  utils.py
tests/: conftest.py  test_accessibility.py  test_agent_manager.py  test_api.py  test_audio.py  test_canvas.py  test_cli.py  test_data_integration.py  test_document.py  test_file_utils.py  test_image.py  test_image_analysis.py  test_integration.py  test_main.py  test_notebook.py  test_performance.py  test_prompt_enhancer.py  test_security.py  test_transforms.py  test_ui.py  test_utils.py  test_validators.py  test_video.py
user_guide/configuration/: index.html
user_guide/core_concepts/: index.html
user_guide/image_generation/: index.html
user_guide/installation/: index.html
user_guide/quickstart/: index.html
